missing at-spi text insertion event
Hello,
libvte misses sending some text insertion in a tricky case, I have attached a simple reproducer:
- run track.py in a terminal
- in another, libvte-based terminal, run reproduce2.sh
actual result:
deleted 126 from 0
insert 49 at 0
caret moved to 46
[5 seconds delay]
deleted 2 from 0
i.e. the insertion of A is missing
expected result:
deleted 126 from 0
insert 49 at 0
caret moved to 46
[5 seconds delay]
deleted 2 from 0
insert 2 at 46
caret moved to 47