widget: a11y: Add missing text changes on scrolling with modifications

When vte_terminal_accessible_text_scrolled gets called, the terminal
might have not only scrolled, but also changed.  We thus have to check
whether the remaining text really is exactly the same as expected.  If
not, revert to updating the whole terminal.

Fixes: https://gitlab.gnome.org/GNOME/vte/issues/88